--- a/config_user/0_test_i_se_covid.yaml
+++ b/config_user/0_test_i_se_covid.yaml
@@ -1,4 +1,4 @@
-only_samples: True
+only_samples: False
 project_name: test_illumina_se_covid
 fasta_reference: reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta 
 gb_reference: reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gbk 
