--- a/user/sars_cov_2.yaml
+++ b/user/sars_cov_2.yaml
@@ -1,5 +1,5 @@
 only_samples: False
-project_name: sars_compare
+project_name: insaflu_sars
 fasta_reference: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta
 gb_reference: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gbk
 abricate: False
